--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0;url=http://github.com/etocrm">
+    <title>Redirecting</title>
+  </head>
+</html>
